--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,7 +20,7 @@
 			<%- body %>
 		</section>
 		<footer class="main" id="f1">
-			<a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a>
+			<a href="http://es.wikipedia.org/wiki/Quiz">¿Qué es un Quiz?</a>&nbsp;&nbsp;&nbsp;||&nbsp;&nbsp;&nbsp;<a href="https://github.com/jmacuna/quiz">https://github.com/jmacuna/quiz</a>
 		</footer>
 	</div>
   </body>
